ajout action raml, new link heroku

--- a/templates/css/app.styl
+++ b/templates/css/app.styl
@@ -27,6 +27,9 @@ th
 div > p > img
 	width 100%
 
+.navbar-default 
+	background-color #f8f8f8
+	border-color #e7e7e7
 
 .nav.subnav li
 	&.active a
@@ -104,7 +107,7 @@ span.glyphicon.glyphicon-lock
 	height 60px
 	padding-top 6px
 
-	color #999
+	color #777
 	background-color #f8f8f8
 	border-top 1px solid #e7e7e7
 
