--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -61,9 +61,9 @@ html
 				p
 					| Built with&nbsp;
 					a(href="https://github.com/lotaris/apidoc-seed")=name
-					| &nbsp;- #{description}
+					| &nbsp;- #{description} | made by Anthony Da Silva &amp; Laurent Lienher
 				p Version: #{version}  |  Built #{creationDate}
-				p &copy; Anthony Da Silva &amp; Laurent Lienher
+				
 
 		if minifyAssets
 			script(type="text/javascript", src="/js/global.js")
