--- a/templates/css/app.styl
+++ b/templates/css/app.styl
@@ -1,116 +1,136 @@
 html
-	position relative
-	min-height 100%
+  position relative
+  min-height 100%
 
 body
-	padding 0
-	margin-bottom 60px
-	
+  padding 0
+  margin-bottom 60px
+  
 
 a:hover
-	text-decoration underline
+  text-decoration underline
 
 p
-	line-height 24px
-	margin-bottom 17px
+  line-height 24px
+  margin-bottom 17px
 
 table
-	margin-bottom 15px
+  margin-bottom 15px
 
 th, td
-	border 1px dotted #ccc
-	padding 5px 15px
+  border 1px dotted #ccc
+  padding 5px 15px
 
 th
-	background-color #eee
+  background-color #eee
 
 div > p > img
-	width 100%
+  width 100%
 
-.navbar-default 
-	background-color #f8f8f8
-	border-color #e7e7e7
+
 
 .nav.subnav li
-	&.active a
-		border-left 3px solid #428bca
-		margin-left -3px
-	a
-		padding 5px 5px
+  &.active a
+    border-left 3px solid #428bca
+    margin-left -3px
+  a
+    padding 5px 5px
 
 .nav > li > a > .glyphicon
-	font-size 12px
-	margin-left 6px
+  font-size 12px
+  margin-left 6px
 
 
 @media(max-width: 768px)
-	.row .private
-		margin-left 0
-		padding-left 15px
-		padding-top 40px
-		.private--vertical-bar
-			width 100%
-			height 30px
+  .row .private
+    margin-left 0
+    padding-left 15px
+    padding-top 40px
+    .private--vertical-bar
+      width 100%
+      height 30px
 
 
 /* expanded rows in the resource panels */
 .list-group
-	span
-		p
-			margin-bottom 0px
-			margin-top 5px
+  span
+    p
+      margin-bottom 0px
+      margin-top 5px
 
 
 /* footer of the resource panels */
 .panel-footer
-	padding 0px 20px 0px 0px
-	text-align right
-	a
-		display block
-		text-align right
-		color #ADA9A9
+  padding 0px 20px 0px 0px
+  text-align right
+  a
+    display block
+    text-align right
+    color #ADA9A9
 
 /* styling for the private blog posts */
 .panel-warning
-	.panel-footer
-		background-color #fcf8e3
+  .panel-footer
+    background-color #fcf8e3
 
 span.glyphicon.glyphicon-lock
-	color #555
-	margin-right: 10px;
-		
+  color #555
+  margin-right: 10px;
+    
 .private
-	border solid 1px #999
-	border-radius 3px
-	margin 10px 0px 10px -45px
-	padding 10px 10px 10px 45px
-	position relative
-	.glyphicon
-		margin-left 7px
-		margin-top 7px
+  border solid 1px #999
+  border-radius 3px
+  margin 10px 0px 10px -45px
+  padding 10px 10px 10px 45px
+  position relative
+  .glyphicon
+    margin-left 7px
+    margin-top 7px
 
 .private--vertical-bar
-	background-color #e7e7e7
-	border-top-left-radius 3px
-	border-bottom-left-radius 3px
-	position absolute
-	left 0
-	top 0
-	bottom 0
-	width 30px
+  background-color #e7e7e7
+  border-top-left-radius 3px
+  border-bottom-left-radius 3px
+  position absolute
+  left 0
+  top 0
+  bottom 0
+  width 30px
 
 
 .footer
-	position absolute
-	bottom 0
-	width 100%
-	height 60px
-	padding-top 6px
+  position absolute
+  bottom 0
+  width 100%
+  height 60px
+  padding-top 6px
 
-	color #777
-	background-color #f8f8f8
-	border-top 1px solid #e7e7e7
+  color #ffffff
+  background-color #34495e
+  border-top 1px solid #e7e7e7
 
-	text-align center
-	p
-		margin 0
+  text-align center
+  p
+    margin 0
+
+/* navbar styling */
+
+.navbar-default
+  background-color #34495e
+  border-color #e7e7e7
+  
+.navbar-default .navbar-nav > li > a:hover
+  color #bdc3c7
+  
+.navbar-default .navbar-nav > .active > a
+  background-color #2c3e50
+  color #ffffff
+  
+ .navbar-default .navbar-nav > .active > a:hover
+   background-color #2c3e50
+   color #bdc3c7
+   
+ 
+
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-brand 
+  color #ffffff
