--- a/templates/css/app.styl
+++ b/templates/css/app.styl
@@ -134,3 +134,7 @@ span.glyphicon.glyphicon-lock
 
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-brand 
   color #ffffff
+
+.wny
+  height 381px
+  width 283px
