--- a/templates/css/app.styl
+++ b/templates/css/app.styl
@@ -138,3 +138,11 @@ span.glyphicon.glyphicon-lock
 .wny
   height 381px
   width 283px
+  
+.centered_img
+  height inherit
+  width inherit
+  display block
+  margin-left auto
+  margin-right auto
+  
