--- a/templates/css/raml.styl
+++ b/templates/css/raml.styl
@@ -1,111 +1,139 @@
+$grey1 = #161616 //darker grey
+$grey2 = #262626 //middle grey
+$grey3 = #3a3a3a //lighter grey
+
+$deepBlue = #193754 //deep blue
+
+$textBlue = #4894b3 //text color blue
+$textWhite = #cfcfcf //text color white title
+$text = #a8a8a8 // plain text
+$textGrey = #6f6f6f //text color grey unselected
 
 .markdown *:last-child
-	margin-bottom 0
+  margin-bottom 0
 
 
 .parent
-	color #999
+  color #999
 
 .list-group-item
-	& > .badge
-		float none
-		margin-right 6px
+  & > .badge
+    float none
+    margin-right 6px
 
 .panel-title
-	& > .block
-		& > .badge
-			float right
-			margin-left 5px
+  & > .block
+    & > .badge
+      float right
+      margin-left 5px
 
 .badge
-	border-radius 0
-	text-transform uppercase
-	min-width 70px
-	font-weight normal
-	color #f3f3f6
-	line-height normal
+  border-radius 0
+  text-transform uppercase
+  min-width 70px
+  font-weight normal
+  color #f3f3f6
+  line-height normal
 
 
 .block
-	display block
-	.badge
-		visibility hidden
-	&.collapsed
-		.badge
-			visibility visible
+  display block
+  .badge
+    visibility hidden
+  &.collapsed
+    .badge
+      visibility visible
 
 .block .glyphicon, .panel-heading > h3 .glyphicon
-		font-size 12px
-		margin-left 5px
-		color #555
+    font-size 12px
+    margin-left 5px
+    color #555
 
 .panel-warning .panel-heading > h3 .glyphicon
-		font-size 12px
-		margin-left 5px
-		color #8a6d3b
+    font-size 12px
+    margin-left 5px
+    color #8a6d3b
 
 .badge > .glyphicon
-	color white
-	margin-left 5px
-	margin-right 1px
+  color white
+  margin-left 5px
+  margin-right 1px
 
 .badge_get
-	background-color #63a8e2
+  background-color #63a8e2
 
 .badge_post
-	background-color #6cbd7d
+  background-color #6cbd7d
 
 .badge_put
-	background-color #22bac4
+  background-color #22bac4
 
 .badge_delete
-	background-color #d26460
+  background-color #d26460
 
 .list-group, .panel-group
-	margin-bottom 0
+  margin-bottom 0
+
+.panel
+  background-color $grey2
 
 .panel-group
-	.panel
-		& + .panel-white
-			margin-top 0
-	.panel-white
-		border-bottom 1px solid #F5F5F5
-		border-radius 0
+  .panel
+    & + .panel-white
+      margin-top 0
+  .panel-white
+    border-bottom 1px solid $grey2
+    border-radius 0
 
 .panel-white
-	&:last-child
-		border-bottom-color white
-		-webkit-box-shadow none
-		box-shadow none
-	.panel-heading
-		background white
+  &:last-child
+    border-bottom-color $grey2
+    -webkit-box-shadow none
+    box-shadow none
+  .panel-heading
+    background $grey1
 
 .tab-pane
-	ul
-		padding-left 2em
-	h2
-		font-size 1.2em
-		padding-bottom 4px
-		border-bottom 1px solid #ddd
-	h3
-		font-size 1.1em
+  ul
+    padding-left 2em
+  h2
+    font-size 1.2em
+    padding-bottom 4px
+    border-bottom 1px solid $grey2
+  h3
+    font-size 1.1em
 
 .tab-content
-	border-left 1px solid #ddd
-	border-right 1px solid #ddd
-	border-bottom 1px solid #ddd
-	padding 10px
+  border-left 1px solid $grey2
+  border-right 1px solid $grey2
+  border-bottom 1px solid $grey2
+  padding 10px
 
 .resource-description
-	border-bottom 1px solid #ddd
-	background #fcfcfc
-	padding 15px 15px 0 15px
-	margin -15px -15px 10px -15px
+  border-bottom 1px solid $grey2
+  background $grey1
+  padding 15px 15px 0 15px
+  margin -15px -15px 10px -15px
 
 .modal .well
-	margin-bottom 0
+  margin-bottom 0
 
 .panel-warning
-	.panel-footer
-		border-top solid 1px #faebcc
-	
+  .panel-footer
+    border-top solid 1px #faebcc
+  
+.list-group-item
+  background-color $grey1
+  color $textWhite
+  border 1px solid $grey2
+
+a.list-group-item 
+    color $textWhite
+  
+a.list-group-item:hover, a.list-group-item:focus
+  background-color $deepBlue
+  color $textWhite
+  text-decoration none
+
+.panel-group .panel-heading + .panel-collapse > .panel-body
+    border-top 1px solid $grey2
