last update of CSS

--- a/templates/css/raml.styl
+++ b/templates/css/raml.styl
@@ -60,16 +60,16 @@ $textGrey = #6f6f6f //text color grey unselected
   margin-right 1px
 
 .badge_get
-  background-color #63a8e2
+  background-color #3498db
 
 .badge_post
-  background-color #6cbd7d
+  background-color #27ae60
 
 .badge_put
-  background-color #22bac4
+  background-color #1abc9c
 
 .badge_delete
-  background-color #d26460
+  background-color #e74c3c
 
 .list-group, .panel-group
   margin-bottom 0
