--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -23,7 +23,7 @@ html
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-					a.navbar-brand(href='#') API Doc
+					a.navbar-brand(href="/api/reference") API Doc
 
 				#navbarcollapse.collapse.navbar-collapse
 					ul.nav.navbar-nav
