--- a/templates/css/app.styl
+++ b/templates/css/app.styl
@@ -42,7 +42,7 @@ table
   margin-bottom 15px
 
 th, td
-  border 1px dotted #ccc
+  border 1px solid $grey2
   padding 5px 15px
 
 th
@@ -125,7 +125,7 @@ span.glyphicon.glyphicon-lock
 
 .footer
   position absolute
-  bottom 0
+  bottom 0px
   width 100%
   height 60px
   padding-top 6px
@@ -145,15 +145,18 @@ span.glyphicon.glyphicon-lock
   border-color $grey2
   
 .navbar-default .navbar-nav > li > a:hover
-  color #bdc3c7
+  color $textWhite
+  background-color $deepBlue
+  
+
   
 .navbar-default .navbar-nav > .active > a
   background-color $deepBlue
   color $textWhite
   
- .navbar-default .navbar-nav > .active > a:hover, .navbar-default  > a:hover
+ .navbar-default .navbar-nav > .active > a:hover, .navbar-default  > a:hover, .navbar-default .navbar-nav > li > a:focus
    background-color $deepBlue
-   color #bdc3c7
+   color $textGrey
    
  
 
@@ -161,7 +164,7 @@ span.glyphicon.glyphicon-lock
   color $textWhite
 
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus
-  color #bdc3c7
+  color $textGrey
 
 .wny
   height 381px
@@ -257,3 +260,18 @@ hr
   background-color $deepBlue
   border-color $grey2
   color $textWhite
+  
+pre
+  background-color $grey1
+  color $textWhite
+  border: 1px solid $grey2
+  
+.btn:hover, .btn:focus
+  color $textGrey
+
+code 
+    background-color $grey3
+    border-radius 0px
+    color #c7254e;
+    font-size 90%
+    padding 2px 4px
